Overview of Changes in 0.91.0 (since 0.90.3)
============================================
Changes in this release:
- New supported widget: GtkExpander is now themed by the engine.
- New supported widget: GtkInfoBar is now themed by the engine.
- New option: arrowstyle = 1 to draw filled arrows.
              arrowstyle = 2 to draw fat filled arrows.
- New option: border_shades = { 1.0, 1.0 } to draw a gradient on the border.
- New option: border_colors = { "#ffffff", "#ffffff" }
              to set the colors used on the border of many widgets.
              border_colors = FALSE to disable.
- New option: cellstyle = 0 to remove the border around the selected cell.
              cellstyle = 1 for the border around the selected cell (as before).
- New option: comboboxstyle = 1 to colorize the GtkComboBox below the arrow.
- New option: default_button_color = "#ffffff" to specify a 2px border for the
              default button.
- New option: disable_focus = TRUE 
- New option: expanderstyle = 0 to draw arrows.
              expanderstyle = 1 to draw circles with plus and minus.
              expanderstyle = 2 to draw buttons with plus and minus.
- New option: focusstyle = 0 to disable focus drawing.
              focusstyle = 1 to use dots.
              focusstyle = 2 to use a small colored rectangle.
              focusstyle = 3 to use a colored rectangle that touches the borders.             
- New option: gradient_colors = { "#ffffff", "#ffffff", "#ffffff", "#ffffff" }
              to set the colors used on the gradient of many widgets.
              gradient_colors = FALSE to disable.
- New option: handlestyle = 0 for three simple lines.
              handlestyle = 1 for three simple lines with inset.
              handlestyle = 2 for three near simple lines with inset.
- New option: prelight_shade = 1.0 to select the shade level used in the
              scrollbar's slider, GtkComboBox with comboboxstyle = 1 and