@@ -1178,7 +1178,7 @@ murrine_exchange_axis (cairo_t  *cr,
 
 void
 murrine_get_fill_color (MurrineRGB *color,
-                const MurrineGradients *mrn_gradient)
+                        const MurrineGradients *mrn_gradient)
 {
 	if (mrn_gradient->has_gradient_colors)
 	{
